# ignition

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  ignition.example.toml  lefthook.yml
.cargo/: config.toml  runner.sh
build-stack/: buildkid.service  buildkitd.toml
console/: .cta.json  .dockerignore  Dockerfile  README.md  biome.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
console/src/: routeTree.gen.ts  styles.css
console/src/components/: app-sidebar.tsx  breadcrumbs.tsx  nav-main.tsx  nav-projects.tsx  tenant-switcher.tsx
console/src/data/: mockData.ts
console/src/routes/: __root.tsx  index.tsx  machines.$machineId.tsx  machines.index.tsx  machines.route.tsx  machines.tsx  machines_.$machineId.tsx
console/src/types/: machine.ts
demos/: Dockerfile  Dockerfile.node  caddy.yaml  eu-test.yaml  landing-page.yaml  minecraft.yaml  n8n.yaml  nginx-flash.yaml  nginx.yaml  postgres.yaml  redis.yaml  restart-policy-remove.yaml  simple-deployment.yaml  test-certificate.yaml  ubuntu-sshd.yaml
demos/app/: nginx.yaml
demos/console/: app.yaml
demos/debugging/: minio.yaml
demos/dns-test/: dns-test.js  dns-test.sh  dns-test.yaml  internal-nginx.yaml
demos/early-access/: demo.yaml
demos/landing/: machine.yaml  service.yaml
demos/lttle-by-lttle/: README.md  app.yaml  db-external.yaml  db.yaml  volume.yaml
demos/n8n/: Dockerfile  Justfile  hook.js
demos/postgres/: Dockerfile  Makefile  lttle_pg.c
demos/templates/: _vars.yaml  demo.yaml  test.env
docs/: certs.md  kvm.md  net.md
get/: lttle.sh
hello-page/: index.css  index.html
kernel-configs/linux/: small-6.1.config  stable-6.1.config
meta/: Cargo.toml
meta/src/: analysis.rs  lib.rs  types.rs
meta/src/generation/: conversions.rs  enums.rs  impls.rs  mod.rs  structs.rs
meta/src/ui/: summary.rs  table.rs
notes/: operations.txt
registry-stack/: docker-compose.yaml
registry-stack/config/: registry.yml
schemas/: api.json  resources.json  schema.json
sdk/typescript-client/: README.md  package.json  tsconfig.json
sdk/typescript-client/src/: client.ts  index.ts  types.ts
src/: build.rs  constants.rs  ignition.rs  ignition_demo.rs  lib.rs  repository_test.rs  spark.rs  test_playground.rs
src/agent/: build.rs  data.rs  image.rs  job.rs  mod.rs  net.rs  openai.rs  port_allocator.rs  tracker.rs  volume.rs
src/agent/certificate/: config.rs  mod.rs
src/agent/dns/: config.rs  handler.rs  mod.rs
src/agent/image/: credentials.rs  oci.rs  unpacker.rs
src/agent/logs/: mod.rs
src/agent/machine/: machine.rs  mod.rs  state_machine.rs
src/agent/net/: device.rs  ip_range.rs
src/agent/proxy/: mod.rs  proto.rs  tls.rs
src/agent/volume/: fs.rs
src/api/: Cargo.toml  auth.rs  build.rs  context.rs  core.rs  gadget.rs  mod.rs  resource_service.rs
src/api/src/: lib.rs
src/api/src/data/: image.rs  mod.rs  token.rs  user.rs
src/api/src/services/: admin.rs  auth.rs  image.rs  machine.rs  mod.rs  service.rs  user.rs
src/build_utils/: cargo.rs  fs.rs  mod.rs  resource.rs
src/build_utils/resource/: api_client.rs  builder.rs  cel.rs  client.rs  index.rs  mod.rs  repository.rs  schema.rs  services.rs  typescript_client.rs
src/cli/: Cargo.toml  client.rs  config.rs  main.rs  schema.json
src/cli/cmd/: app.rs  certificate.rs  completion.rs  deploy.rs  docker.rs  gadget.rs  import.rs  login.rs  machine.rs  mod.rs  namespace.rs  profile.rs  query.rs  service.rs  volume.rs
src/cli/expr/: ctx.rs  eval.rs  mod.rs
src/cli/src/: build.rs  client.rs  config.rs  main.rs  resource.rs
src/cli/src/cmd/: admin.rs  deploy.rs  login.rs  machine.rs  mod.rs  service.rs  user.rs
src/cli/ui/: message.rs  mod.rs  summary.rs  table.rs
src/client/: Cargo.toml  build.rs
src/client/src/: lib.rs
src/controller/: Cargo.toml  app.rs  certificate.rs  context.rs  machine.rs  mod.rs  service.rs  volume.rs
src/controller/scheduler/: mod.rs  queue.rs
src/controller/src/: deployment.rs  lib.rs  volume.rs
src/controller/src/image/: credentials.rs  mod.rs
src/controller/src/job/: machine.rs  mod.rs
src/controller/src/logs/: mod.rs
src/controller/src/machine/: machine.rs  mod.rs
src/controller/src/model/: machine.rs  mod.rs  service.rs
src/controller/src/net/: ip.rs  mod.rs  tap.rs
src/controller/src/proxy/: mod.rs
src/controller/src/service/: mod.rs
src/controller/src/vms/: instance.rs  mod.rs  pipeline.rs
src/daemon/: cmd.rs  config.rs  main.rs
src/eval/: ctx.rs  mod.rs
src/eval/std_lib/: str.rs
src/machinery/: api_schema.rs  mod.rs  store.rs
src/meta/: Cargo.toml
src/meta/src/: lib.rs
src/proto/: admin.proto  deployment.proto  ignition.proto  image.proto  machine.proto  service.proto  user.proto  util.proto
src/proxy/: .gitignore  Cargo.toml  docker-compose.yml
src/proxy/certs/: README.md
src/proxy/src/: main.rs
src/resources/: app.rs  certificate.rs  core.rs  gadget.rs  machine.rs  metadata.rs  mod.rs  service.rs  volume.rs
src/sds/: Cargo.toml
src/takeoff/: Cargo.toml  main.rs  proto.rs
src/takeoff-proto/: Cargo.toml
src/takeoff/src/: guest.rs  main.rs  mount.rs  oci_config.rs  print.rs  serial.rs
src/tools/: generate_cli_install_script.rs  generate_hmac_secret.rs  generate_token.rs
src/util/: Cargo.toml
src/util/src/: encoding.rs  id.rs  lib.rs
src/utils/: id.rs  mod.rs  size.rs  time.rs  tracing.rs
src/vmm/: Cargo.toml
src/vmm/src/: config.rs  constants.rs  lib.rs  memory.rs  state.rs  vcpu.rs  vm.rs  vmm.rs
src/vmm/src/cpu_ref/: gdt.rs  interrupts.rs  mptable.rs  msrs.rs
src/vmm/src/device/: mod.rs
src/vmm/src/device/legacy/: i8042.rs  serial.rs  trigger.rs
src/vmm/src/device/meta/: guest_manager.rs  mod.rs
src/vmm/src/device/virtio/: mmio.rs  mod.rs
src/vmm/src/device/virtio/block/: device.rs  handler.rs  mod.rs
src/vmm/src/device/virtio/net/: device.rs  handler.rs  mod.rs  tap.rs
telemetry-stack/: docker-compose.yml  loki-config.yml  prometheus.yml
templates/lovable/: dockerignore  lttle.yaml  readme-simple.md  readme-supabase.md  vscode-settings.json
(+40 files in other folders)
