[package]
name = "ignition"
version = "0.1.0"
edition = "2024"

build = "src/build.rs"

[lib]
name = "ignition"
path = "src/lib.rs"

[[bin]]
name = "ignitiond"
path = "src/daemon/main.rs"

[[bin]]
name = "takeoff"
path = "src/takeoff/main.rs"

[[bin]]
name = "lttle"
path = "src/cli/main.rs"

[workspace]
members = ["meta", "."]
resolver = "2"

[dependencies]
meta = { path = "meta" }
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
base62 = "2.2.1"
docker_credential = "1.3.2"
flate2 = "1.1.2"
futures-util = "0.3.31"
heed = { version = "0.22.0", default-features = false }
tokio = { version = "1.45.1", features = ["full"] }
nix = "0.30.1"
oci-client = "0.15.0"
papaya = { version = "0.2.1", features = ["serde"] }
rand = "0.9.1"
rtnetlink = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tempfile = "3.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4", "fast-rng"] }
async-trait = "0.1.88"
async-channel = "2.5.0"

[build-dependencies]
meta = { path = "meta" }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
heed = { version = "0.22.0", default-features = false }
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.140"
