[package]
name = "ignition"
version = "0.1.0-rc13"
edition = "2024"

build = "src/build.rs"

[lib]
name = "ignition"
path = "src/lib.rs"

[[bin]]
name = "ignitiond"
path = "src/daemon/main.rs"
required-features = ["daemon"]

[[bin]]
name = "lttle"
path = "src/cli/main.rs"

[[bin]]
name = "generate-hmac-secret-tool"
path = "src/tools/generate_hmac_secret.rs"

[[bin]]
name = "generate-token-tool"
path = "src/tools/generate_token.rs"
required-features = ["daemon"]

[[bin]]
name = "generate-cli-install-script"
path = "src/tools/generate_cli_install_script.rs"

[workspace]
members = ["meta", "src/takeoff", "src/takeoff-proto", "."]
resolver = "2"

[dependencies]
meta = { path = "meta" }
takeoff-proto = { path = "src/takeoff-proto" }
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros", "ws"] }
base62 = "2.2.1"
docker_credential = "1.3.2"
flate2 = "1.1.2"
futures-util = "0.3.31"
heed = { version = "0.22.0", default-features = false }
tokio = { version = "1.45.1", features = ["full"] }
nix = { version = "0.30.1", features = ["fs", "mman", "mount"] }
oci-client = "0.15.0"
papaya = { version = "0.2.1", features = ["serde"] }
rand = "0.9.1"
rtnetlink = { version = "0.17.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tar = "0.4.44"
tempfile = "3.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4", "fast-rng"] }
async-trait = "0.1.88"
async-channel = "2.5.0"
schemars = "1.0.4"
reqwest = "0.12.22"
terminal_size = "0.4.2"
ansi_term = "0.12.1"
jsonwebtoken = "9.3.1"
directories = "6.0.0"
toml = "0.9.2"
clap = { version = "4.5.41", features = ["derive"] }
serde_yaml = "0.9.34"
humantime = "2.2.0"
clap_complete = "4.5.55"
atty = "0.2.14"
bincode = "2.0.1"
hex = "0.4.3"
base64 = "0.22.1"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
url = "2.5.4"
vm-memory = { version = "0.16.2", features = ["backend-mmap"] }
vm-allocator = "0.1.3"
linux-loader = { version = "0.13.0", features = ["elf"] }
libc = "0.2.169"
kvm-bindings = { version = "0.13.0", features = ["fam-wrappers"] }
kvm-ioctls = { version = "0.23.0", optional = true }
event-manager = { version = "0.4.0", features = [
    "remote_endpoint",
], optional = true }
vmm-sys-util = { version = "0.14.0", optional = true }
vm-device = "0.1.0"
vm-superio = "0.8.0"
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio.git", optional = true }
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git", optional = true }
virtio-blk = { git = "https://github.com/rust-vmm/vm-virtio.git", features = [
    "backend-stdio",
], optional = true }
thiserror = "2.0.12"
async-broadcast = "0.7.2"
ordinal = "0.4.0"
bytes = "1.10.1"
twoway = "0.2.2"
httparse = "1.10.1"
rustls = "0.23.31"
tokio-rustls = "0.26.2"
rustls-pemfile = "2.2.0"
hyper = "1.6.0"
hyper-util = "0.1.16"
hickory-server = "0.24"
hickory-resolver = "0.24"
hickory-proto = "0.24"
chrono = { version = "0.4.41", features = ["serde"] }
instant-acme = "0.8.2"
http-body-util = "0.1.3"
serde_urlencoded = "0.7.1"
tungstenite = "0.27.0"
crossterm = "0.29.0"
scopeguard = "1.2.0"
x509-parser = "0.16.0"
home = "0.5.11"
cel = { version = "0.11.1", features = ["regex", "chrono", "json"] }
git2 = { version = "0.20.2", default-features = false }
dotenvy = "0.15.7"
caps = { version = "0.5.5", optional = true }
blake3 = "1.8.2"
nixpacks = { git = "https://github.com/lttle-cloud/nixpacks", rev = "f2ac2b18d6be79ad815c714c894ea776245a031e" }
async-openai = { version = "0.29.3", features = [
    "native-tls",
], default-features = false }
lovable-client = { path = "../lovable-client", optional = true }
rcgen = { version = "0.14.5", features = ["pem", "x509-parser", "crypto"] }
time = "0.3.44"

[features]
default = []
daemon = [
    "rtnetlink",
    "kvm-ioctls",
    "vmm-sys-util",
    "event-manager",
    "virtio-device",
    "virtio-queue",
    "virtio-blk",
    "caps",
]
lovable = ["lovable-client"]

[build-dependencies]
meta = { path = "meta" }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
heed = { version = "0.22.0", default-features = false }
tokio = { version = "1.45.1", features = ["full"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
schemars = "1.0.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
base62 = "2.2.1"
damascus = { git = "https://github.com/laurci/damascus", rev = "e4698cc8d419e06caa280ee4917f7497ffc2184e" }
