[package]
name = "api"
version = "0.1.0"
edition = "2021"


[dependencies]
prost = "0.13.4"
tonic = "0.13.0"
util = { path = "../util" }
sds = { path = "../sds" }
cuid = "1.3.3"
base64 = "0.22.1"
jsonwebtoken = "9.2.0"
controller = { path = "../controller" }

[build-dependencies]
prost-build = "0.13.4"
tonic-build = "0.13.0"
