[package]
name = "cli"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[[bin]]
name = "ignition"
path = "src/main.rs"

[dependencies]
util = { path = "../util" }
ignition-client = { path = "../client" }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

[build-dependencies]
util = { path = "../util" }
