[package]
name = "cli"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[[bin]]
name = "lttle"
path = "src/main.rs"

[dependencies]
util = { path = "../util" }
ignition-client = { path = "../client" }
tracing-subscriber = "0.3.19"
clap = { version = "4.5.28", features = ["derive"] }
directories = "6.0.0"
toml = "0.8.23"
comfy-table = "7.1.4"
serde_yaml = "0.9.34"

[build-dependencies]
util = { path = "../util" }
serde_yaml = "0.9.34"
