[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
util = { path = "../util" }
sds = { path = "../sds" }
vmm = { path = "../vmm" }
rtnetlink = "0.16.0"
nix = "0.30.1"
tempfile = "3.20.0"
docker_credential = "1.3.1"
flate2 = "1.1.1"
oci-client = "0.14.0"
serde_json = "1.0.140"
tar = "0.4.44"
