[package]
name = "takeoff"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["fs", "mman", "mount"] }
util = { path = "../util" }
ping = "0.5.2"
axum = "0.8.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
