[package]
name = "takeoff"
version = "0.1.0"
edition = "2024"

[dependencies]
takeoff-proto = { path = "../takeoff-proto" }
tokio = { version = "1.47.0", features = ["full"] }
nix = { version = "0.30.1", features = ["fs", "mman", "mount"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
