[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
meta = { path = "../meta" }
schemars = "0.8.21"
serde_json = "1.0.138"
futures-util = "0.3.31"
rand = "0.9.1"
