[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
meta = { path = "../meta" }
schemars = "0.8.21"
serde_json = "1.0.138"
futures-util = "0.3.31"
rand = "0.9.1"
uuid = { version = "1.17.0", features = ["v4", "fast-rng"] }
futures = "0.3.31"
tracing = "0.1.41"
tokio-util = "0.7.15"
base62 = "2.2.1"
