[package]
name = "vmm"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util" }
linux-loader = { version = "0.13.0", features = ["elf"] }
vm-memory = { version = "0.16.1", features = ["backend-mmap"] }
libc = "0.2.169"
kvm-bindings = { version = "0.10.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.19.1"
vm-allocator = "0.1.1"
event-manager = "0.4.0"
vmm-sys-util = "0.12.1"
vm-device = "0.1.0"
thiserror = "2.0.9"
