[package]
name = "vmm"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util" }
linux-loader = { version = "0.13.0", features = ["elf"] }
vm-memory = { version = "0.16.1", features = ["backend-mmap"] }
libc = "0.2.169"
kvm-bindings = { version = "0.10.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.19.1"
vm-allocator = "0.1.1"
event-manager = { version = "0.4.0", features = ["remote_endpoint"] }
vmm-sys-util = "0.12.1"
vm-device = "0.1.0"
thiserror = "2.0.9"
vm-superio = "0.8.0"
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio.git" }
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git" }
tracing = "0.1.41"
